--- a/website/styles.css
+++ b/website/styles.css
@@ -179,23 +179,10 @@ div#code ul
 }
 
 /* --------- COLLAPSIBLE PANELS ----------*/
- 
-p.trigger{
-    margin-bottom:7px;
-    margin-top:-5px;
-}
-
-.toggle_container{
-    margin-bottom:10px;
-}
-
-.toggle_container p{
-    margin:0px;
-}
-
-.toggle_container{
-    background:#f0f0f0;
-    clear: both;
-    font-size:100%;
-}
+details, summary {display: block;}
+details.details_shim_closed > * {display: none;}
+details.details_shim_closed > summary {display: block;}
+details.details_shim_open   > summary {display: block;}
+details.details_shim_closed > summary:before {display: inline-block; content: "\25b6"; padding: 0 0.1em; margin-right: 0.4em; font-size: 0.9em;}
+details.details_shim_open   > summary:before {display: inline-block; content: "\25bc"; padding: 0; margin-right: 0.35em;}
 
