--- a/website/styles.css
+++ b/website/styles.css
@@ -188,11 +188,11 @@ div#code ul
     list-style-type: none;    
 }
 
-/* --------- COLLAPSIBLE PANELS ----------*/
+/* --------- COLLAPSIBLE PANELS ----------
 details, summary {display: block;}
 details.details_shim_closed > * {display: none;}
 details.details_shim_closed > summary {display: block;}
 details.details_shim_open   > summary {display: block;}
 details.details_shim_closed > summary:before {display: inline-block; content: "\25b6"; padding: 0 0.1em; margin-right: 0.4em; font-size: 0.9em;}
 details.details_shim_open   > summary:before {display: inline-block; content: "\25bc"; padding: 0; margin-right: 0.35em;}
-
+*/
